--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -309,11 +309,13 @@ button:hover .button-text {
       color: #000;
       font-size: 5em;
       align-self: center;
+      text-align: center;
+      white-space: nowrap;
       padding: 100px; }
       @media screen and (max-width: 500px) {
         .about-container .about-text h1 {
-          font-size: 2.5em;
-          font-weight: 100;
+          font-size: 3.5em;
+          font-weight: 200;
           text-align: center;
           width: 100%;
           padding: 50px 0 0 0;
